feat: sentry-qt integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,8 +225,11 @@ if(CCACHE_FOUND)
   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif(CCACHE_FOUND)
 
+set(SENTRY_BACKEND "crashpad")
+
 add_subdirectory(3rdparty/edbee-lib/edbee-lib)
 add_subdirectory(3rdparty/communi)
+add_subdirectory(3rdparty/sentry-native)
 add_subdirectory(translations/translated)
 add_subdirectory(src)
 add_subdirectory(test)
