--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,7 @@
 [submodule "3rdparty/qt-ordered-map"]
 	path = 3rdparty/qt-ordered-map
 	url = https://github.com/Mudlet/qt-ordered-map
+
+[submodule "sentry-qt"]
+	path = 3rdparty/sentry-native
+	url = https://github.com/getsentry/sentry-native
