Add GMCPAuthenticator class and handle authentication GMCP messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,8 +38,8 @@ cmake_minimum_required(VERSION 3.3)
 if(APPLE)
   # needed for fetching Sparkle
   cmake_minimum_required(VERSION 3.18)
-  # minimum supported version by Qt6 for our Qt5/Qt6 build compatibility
-  set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "")
+  # minimum supported version by Apple
+  set(CMAKE_OSX_DEPLOYMENT_TARGET "10.14" CACHE STRING "")
 endif()
 
 if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/vcpkg/scripts/buildsystems/vcpkg.cmake)
