Infrastructure: split TLuaInterpreter.cpp's Discord files out separately (#7133)
<!-- Keep the title short & concise so anyone non-technical can
understand it,
     the title appears in PTB changelogs -->
#### Brief overview of PR changes/additions
Split TLuaInterpreter.cpp into a domain-specific Discord functions file.
#### Motivation for adding to Mudlet
A 18k line C++ files makes a lot of tools cry.
#### Other info (issues closed, discussion etc)
I've purposefully put the new files into a similar but random-ish
location in mudlet.pro and CMakeLists.txt to reduce the changes of
conflicts when merging the PRs. We can fix the order in a single PR
afterwards.

---------

Co-authored-by: Vadim Peretokin <vadim.peretokin@carasent.com>
Co-authored-by: Kebap <kebap_spam@gmx.net>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,6 +123,7 @@ set(mudlet_SRCS
     TLuaInterpreterMapper.cpp
     TMap.cpp
     TMapLabel.cpp
+    TLuaInterpreterDiscord.cpp
     TMainConsole.cpp
     TMedia.cpp
     TMxpElementDefinitionHandler.cpp
