--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,6 +123,7 @@ set(mudlet_SRCS
     TLinkStore.cpp
     TLuaInterpreter.cpp
     TLuaInterpreterNetworking.cpp
+    TLuaInterpreterMudletObjects.cpp
     TLuaInterpreterMapper.cpp
     TMap.cpp
     TMapLabel.cpp
