--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,7 +43,9 @@ if(WIN32)
     list(APPEND mudlet_RCCS icons/mudlet_ptb.ico)
   elseif((APP_BUILD matches "-dev.+") or (APP_BUILD matches "-test.+"))
     # The above test may not be correct as it won't pick up builds where
-    # MUDLET_VERSION_BUILD has been set in the environment:
+    # MUDLET_VERSION_BUILD has been set in the environment - OTOH for
+    # "Packagers" they will likely want the original icon anyhow for their
+    # modified for their system packages of Mudlet:
     list(APPEND mudlet_RCCS icons/mudlet_dev.ico)
   else()
     list(APPEND mudlet_RCCS icons/mudlet.ico)
