Polish: simplify some things and also apply them for a Windows CMake build
Signed-off-by: Stephen Lyons <slysven@virginmedia.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,14 @@ execute_process(
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
-# Report it:
-message(STATUS "Git SHA1: ${GIT_SHA1}")
+# If a CI/CB build system provides an alternative Git SHA1 to identify the build
+# use that instead - reporting which is being used:
+if(DEFINED ENV{BUILD_COMMIT} AND NOT $ENV{BUILD_COMMIT} STREQUAL "")
+    set(GIT_SHA1 string(TOLOWER $ENV{BUILD_COMMIT}))
+    message(STATUS "Git SHA1 set from environemnt: ${GIT_SHA1}")
+else()
+    message(STATUS "Git SHA1 used: ${GIT_SHA1}")
+endif()
 
 # APP_BUILD should only be empty/null in official "release" builds, developers
 # may like to set the MUDLET_VERSION_BUILD environment variable to their user
