refactor: macos specific checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,9 +202,11 @@ git_submodule_init(
   CHECK_FILE "3rdparty/edbee-lib/CMakeLists.txt" SUBMODULE_PATH
   "3rdparty/edbee-lib" READABLE_NAME "edbee-lib editor widget")
 
-git_submodule_init(
-  CHECK_FILE "3rdparty/sentry-native/CMakeLists.txt" SUBMODULE_PATH
-  "3rdparty/sentry-native" READABLE_NAME "sentry-native")
+if(APPLE)
+  git_submodule_init(
+    CHECK_FILE "3rdparty/sentry-native/CMakeLists.txt" SUBMODULE_PATH
+    "3rdparty/sentry-native" READABLE_NAME "sentry-native")
+endif()
 
 if(USE_OWN_QTKEYCHAIN)
   git_submodule_init(
@@ -263,9 +265,12 @@ set(SENTRY_BACKEND "crashpad")
 set(SENTRY_INCLUDE_DIR "3rdparty/sentry-native/include")
 set(SENTRY_LIBRARIES "3rdparty/sentry-native")
 
+if(APPLE)
+  add_subdirectory(3rdparty/sentry-native)
+endif()
+
 add_subdirectory(3rdparty/edbee-lib/edbee-lib)
 add_subdirectory(3rdparty/communi)
-add_subdirectory(3rdparty/sentry-native)
 add_subdirectory(translations/translated)
 add_subdirectory(src)
 add_subdirectory(test)
