--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -690,14 +690,6 @@ if(UNIX AND NOT APPLE)
 endif()
 
 if(APPLE)
-  set(SENTRY_ORG "")
-  set(SENTRY_PROJECT "")
-  set(SENTRY_AUTH_TOKEN "")
-
-  execute_process(
-    COMMAND curl -sL https://sentry.io/get-cli/ | sh
-  )
-
   add_custom_command(
       TARGET mudlet POST_BUILD
       COMMAND ${CMAKE_COMMAND} -E copy
@@ -705,11 +697,12 @@ if(APPLE)
               ${mudlet_BINARY_DIR}/src
   )
   
-  if(NOT SENTRY_AUTH_TOKEN STREQUAL "" AND NOT SENTRY_ORG STREQUAL "" AND NOT SENTRY_PROJECT STREQUAL "")
+  if(DEFINED ENV{SENTRY_AUTH_TOKEN} AND NOT $ENV{SENTRY_AUTH_TOKEN} STREQUAL "" AND DEFINED ENV{SENTRY_ORG} AND NOT $ENV{SENTRY_ORG} STREQUAL "" AND DEFINED ENV{SENTRY_PROJECT} AND NOT $ENV{SENTRY_PROJECT} STREQUAL "")
     add_custom_command(
         TARGET mudlet POST_BUILD
-        COMMAND sentry-cli login --auth-token ${SENTRY_AUTH_TOKEN}
-        COMMAND sentry-cli debug-files upload -o ${SENTRY_ORG} -p ${SENTRY_PROJECT}  ${mudlet_BINARY_DIR} --wait 
+        COMMAND curl -sL https://sentry.io/get-cli/ | sh
+        COMMAND sentry-cli login --auth-token $ENV{SENTRY_AUTH_TOKEN}
+        COMMAND sentry-cli debug-files upload -o $ENV{SENTRY_ORG} -p $ENV{SENTRY_PROJECT}  ${mudlet_BINARY_DIR} --wait 
         WORKING_DIRECTORY ${mudlet_BINARY_DIR}
         COMMENT "Uploading debug files to Sentry"
     )
