--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -690,11 +690,21 @@ if(UNIX AND NOT APPLE)
 endif()
 
 if(APPLE)
+  message(STATUS "mudlet_SOURCE_DIR : ${mudlet_SOURCE_DIR}")
+  message(STATUS "mudlet_BINARY_DIR : ${mudlet_BINARY_DIR}")
+
   add_custom_command(
       TARGET mudlet POST_BUILD
       COMMAND ${CMAKE_COMMAND} -E copy
               ${mudlet_BINARY_DIR}/3rdparty/sentry-native/crashpad_build/handler/crashpad_handler
               ${mudlet_BINARY_DIR}/src
+  )
+
+  add_custom_command(
+      TARGET mudlet POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy
+              ${mudlet_BINARY_DIR}/3rdparty/sentry-native/crashpad_build/handler/crashpad_handler
+              ${mudlet_SOURCE_DIR}/src
   )
   
   if(DEFINED ENV{SENTRY_AUTH_TOKEN} AND NOT $ENV{SENTRY_AUTH_TOKEN} STREQUAL "" AND DEFINED ENV{SENTRY_ORG} AND NOT $ENV{SENTRY_ORG} STREQUAL "" AND DEFINED ENV{SENTRY_PROJECT} AND NOT $ENV{SENTRY_PROJECT} STREQUAL "")
