uploading /usr/lib debug files to sentry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,6 +262,7 @@ if(CCACHE_FOUND)
 endif(CCACHE_FOUND)
 
 set(SENTRY_BACKEND "crashpad")
+set(SENTRY_INTEGRATION_QT "ON")
 set(SENTRY_INCLUDE_DIR "3rdparty/sentry-native/include")
 set(SENTRY_LIBRARIES "3rdparty/sentry-native")
 
