chore: macos conditional on setting sentry env variables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,10 +261,12 @@ if(CCACHE_FOUND)
   set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif(CCACHE_FOUND)
 
-set(SENTRY_BACKEND "crashpad")
-set(SENTRY_INTEGRATION_QT "ON")
-set(SENTRY_INCLUDE_DIR "3rdparty/sentry-native/include")
-set(SENTRY_LIBRARIES "3rdparty/sentry-native")
+if(APPLE)
+  set(SENTRY_BACKEND "crashpad")
+  set(SENTRY_INTEGRATION_QT "ON")
+  set(SENTRY_INCLUDE_DIR "3rdparty/sentry-native/include")
+  set(SENTRY_LIBRARIES "3rdparty/sentry-native")
+endif()
 
 if(APPLE)
   add_subdirectory(3rdparty/sentry-native)
