--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -58,7 +58,7 @@ jobs:
         fetch-depth: 0
         
     - name: (Windows) Setup MSYS2
-        if: runner.os == 'windows-2019'
+        if: runner.os == 'Windows'
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW32
@@ -69,23 +69,23 @@ jobs:
           #  mingw-w64-i686-qt5
           
     - name: (Windows) Build Environment Setup
-      if: runner.os == 'windows-2019'
+      if: runner.os == 'Windows'
       shell: msys2 {0}
       run: $GITHUB_WORKSPACE/CI/setup-windows-sdk.sh base
     - name: (Windows) Build
-      if: runner.os == 'windows-2019'
+      if: runner.os == 'Windows'
       shell: msys2 {0}
       run: |
         export BUILD_CONFIG=release
         $GITHUB_WORKSPACE/CI/build-mudlet-for-windows.sh
     - name: (Windows) Package
-      if: runner.os == 'windows-2019'
+      if: runner.os == 'Windows'
       shell: msys2 {0}
       run: |
         export BUILD_CONFIG=release
         $GITHUB_WORKSPACE/CI/package-mudlet-for-windows.sh
     - name: (Windows) Deploy
-      if: runner.os == 'windows-2019'
+      if: runner.os == 'Windows'
       shell: powershell
       run: |
         $Env:BUILD_CONFIG=release
@@ -96,7 +96,7 @@ jobs:
         $Env:GITHUB_PULL_REQUEST_HEAD_SHA = ${{ github.event.pull_request.head.sha }}
         $Env:GITHUB_WORKSPACE/CI/deploy-mudlet-for-windows.ps1
     - name: (Windows) Upload Artifact
-      if: runner.os == 'windows-2019' && env.PUBLIC_TEST_BUILD == 'false'
+      if: runner.os == 'Windows' && env.PUBLIC_TEST_BUILD == 'false'
       uses: actions/upload-artifact@v2
       with:
         name: Mudlet-${{ env.VERSION }}-windows-installer.exe
