--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -94,7 +94,7 @@ jobs:
         $Env:GITHUB_SCHEDULED_BUILD = ${{ github.event_name == 'schedule' }}
         $Env:GITHUB_PULL_REQUEST_NUMBER = ${{ github.event.pull_request.number }}
         $Env:GITHUB_PULL_REQUEST_HEAD_SHA = ${{ github.event.pull_request.head.sha }}
-        $Env:GITHUB_WORKSPACE/CI/deploy-mudlet-for-windows.ps1
+        $Env:GITHUB_WORKSPACE\CI\deploy-mudlet-for-windows.ps1
     - name: (Windows) Upload Artifact
       if: matrix.os == 'windows-2019' && env.PUBLIC_TEST_BUILD == 'false'
       uses: actions/upload-artifact@v2
