--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -88,12 +88,14 @@ jobs:
       if: matrix.os == 'windows-2019'
       shell: powershell
       run: |
-        $Env:BUILD_CONFIG=release
-        $Env:GITHUB_REPO_NAME = ${{ github.repository }}
-        $Env:GITHUB_REPO_TAG = ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
-        $Env:GITHUB_SCHEDULED_BUILD = ${{ github.event_name == 'schedule' }}
+        $Env:BUILD_CONFIG="release"
+        $Env:GITHUB_REPO_NAME = "${{ github.repository }}"
+        $tagged = ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
+        $Env:GITHUB_REPO_TAG = if ($tagged -eq 'true') { 'true' } else { 'false' }
+        $scheduled = ${{ github.event_name == 'schedule' }}
+        $Env:GITHUB_SCHEDULED_BUILD = if ($scheduled -eq 'true') { 'true' } else { 'false' }
         $Env:GITHUB_PULL_REQUEST_NUMBER = ${{ github.event.pull_request.number }}
-        $Env:GITHUB_PULL_REQUEST_HEAD_SHA = ${{ github.event.pull_request.head.sha }}
+        $Env:GITHUB_PULL_REQUEST_HEAD_SHA = "${{ github.event.pull_request.head.sha }}"
         & $Env:GITHUB_WORKSPACE\CI\deploy-mudlet-for-windows.ps1
     - name: (Windows) Upload Artifact
       if: matrix.os == 'windows-2019' && env.PUBLIC_TEST_BUILD == 'false'
