--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -159,6 +159,7 @@ jobs:
         sudo apt-get install gettext -y
 
     - name: Restore from cache and run vcpkg
+      if: matrix.os != 'windows-2019'
       uses: lukka/run-vcpkg@v7
       env:
         vcpkgResponseFile: ${{github.workspace}}/3rdparty/our-vcpkg-dependencies/vcpkg-${{matrix.triplet}}-dependencies
@@ -248,26 +249,26 @@ jobs:
         echo "LUA_PATH=$LUA_PATH" >> $GITHUB_ENV
         echo "LUA_CPATH=$LUA_CPATH" >> $GITHUB_ENV
 
-    - name: (Windows) Install non-vcpkg dependencies
-      if: runner.os == 'Windows'
-      shell: powershell
-      run: |
-        # Install dependencies not available on machine
-        $env:WORKING_BASE_DIR = "${{runner.workspace}}\src"
-        $env:MINGW_BASE_DIR = "${{runner.workspace}}\mingw73_64"
-        echo "MINGW_BASE_DIR=$env:MINGW_BASE_DIR" >> $env:GITHUB_ENV
-        . ${{github.workspace}}\CI\appveyor.functions.ps1
+    #- name: (Windows) Install non-vcpkg dependencies
+    #  if: runner.os == 'Windows'
+    #  shell: powershell
+    #  run: |
+    #    # Install dependencies not available on machine
+    #    $env:WORKING_BASE_DIR = "${{runner.workspace}}\src"
+    #    $env:MINGW_BASE_DIR = "${{runner.workspace}}\mingw73_64"
+    #    echo "MINGW_BASE_DIR=$env:MINGW_BASE_DIR" >> $env:GITHUB_ENV
+    #    . ${{github.workspace}}\CI\appveyor.functions.ps1
 
-        # Libzip install complains when \bin is missing
-        New-Item -ItemType Directory -Path "$env:MINGW_BASE_DIR\bin"
+    #    # Libzip install complains when \bin is missing
+    #    New-Item -ItemType Directory -Path "$env:MINGW_BASE_DIR\bin"
 
-        SetQtBaseDir "$env:WORKING_BASE_DIR\verbose_output.log"
-        SetMingwBaseDir "$env:WORKING_BASE_DIR\verbose_output.log"
-        SetLuarocksPath "$env:WORKING_BASE_DIR\verbose_output.log"
-        $NoShPath = filterPathForSh
+    #    SetQtBaseDir "$env:WORKING_BASE_DIR\verbose_output.log"
+    #    SetMingwBaseDir "$env:WORKING_BASE_DIR\verbose_output.log"
+    #    SetLuarocksPath "$env:WORKING_BASE_DIR\verbose_output.log"
+    #    $NoShPath = filterPathForSh
 
-        CheckAndInstallZlib
-        CheckAndInstallLibzip
+    #    CheckAndInstallZlib
+    #    CheckAndInstallLibzip
 
     - name: (Linux Clang) change compiler & disable optional components
       if: runner.os == 'Linux' && matrix.compiler == 'clang_64'
@@ -308,6 +309,7 @@ jobs:
       run: ccache --zero-stats --show-stats
 
     - name: Build Mudlet
+      if: matrix.os != 'windows-2019'
       uses: lukka/run-cmake@v3
       with:
         cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
@@ -324,7 +326,7 @@ jobs:
         NINJA_STATUS: '[%f/%t %o/sec] '
 
     - name: Upload GitHub Actions artifact of vcpkg build logs
-      if: failure()
+      if: matrix.os != 'windows-2019' && failure()
       uses: actions/upload-artifact@v4
       with:
         name: vcpkg-logs-${{ runner.os }}
@@ -451,7 +453,7 @@ jobs:
         QUIT_MUDLET_AFTER_TESTS: 'true'
 
     - name: Passed Lua tests
-      if: matrix.run_tests == 'true'
+      if: matrix.os != 'windows-2019' && matrix.run_tests == 'true'
       run: |
         if [ -e /tmp/busted-tests-failed ]
         then
@@ -459,19 +461,19 @@ jobs:
           exit 1
         fi
 
-    - name: (windows) Show relevant setup logs
-      if: failure() && runner.os == 'Windows'
-      run: |
-        $env:WORKING_BASE_DIR = "${{runner.workspace}}\src"
-        if (Test-Path -Path "$env:WORKING_BASE_DIR\stderr.log") {
-          echo "Standard error log from non-vcpkg dependencies: "
-          cat $env:WORKING_BASE_DIR\stderr.log
-        }
-        if (Test-Path -Path "$env:WORKING_BASE_DIR\stdout.log") {
-          echo "Standard output log from non-vcpkg dependencies: "
-          cat $env:WORKING_BASE_DIR\stdout.log
-        }
-        if (Test-Path -Path "${{runner.workspace}}/b/ninja/CMakeFiles/CMakeOutput.log") {
-          echo "CMakeOutput.log: "
-          cat "${{runner.workspace}}/b/ninja/CMakeFiles/CMakeOutput.log"
-        }
+    #- name: (windows) Show relevant setup logs
+    #  if: failure() && runner.os == 'Windows'
+    #  run: |
+    #    $env:WORKING_BASE_DIR = "${{runner.workspace}}\src"
+    #    if (Test-Path -Path "$env:WORKING_BASE_DIR\stderr.log") {
+    #      echo "Standard error log from non-vcpkg dependencies: "
+    #      cat $env:WORKING_BASE_DIR\stderr.log
+    #    }
+    #    if (Test-Path -Path "$env:WORKING_BASE_DIR\stdout.log") {
+    #      echo "Standard output log from non-vcpkg dependencies: "
+    #      cat $env:WORKING_BASE_DIR\stdout.log
+    #    }
+    #    if (Test-Path -Path "${{runner.workspace}}/b/ninja/CMakeFiles/CMakeOutput.log") {
+    #      echo "CMakeOutput.log: "
+    #      cat "${{runner.workspace}}/b/ninja/CMakeFiles/CMakeOutput.log"
+    #    }
