--- a/.github/workflows/dangerjs.yml
+++ b/.github/workflows/dangerjs.yml
@@ -15,7 +15,7 @@ jobs:
         ref: ${{github.event.pull_request.head.ref}}
         repository: ${{github.event.pull_request.head.repo.full_name}}
         fetch-depth: 0
-    - name: Install yarn dependencies
+    - name: Install yarn dependencies and run danger
       run: |
         yarn add danger --dev
         yarn danger ci
