--- a/.github/workflows/dangerjs.yml
+++ b/.github/workflows/dangerjs.yml
@@ -14,11 +14,7 @@ jobs:
         ref: ${{github.event.pull_request.head.ref}}
         repository: ${{github.event.pull_request.head.repo.full_name}}
         fetch-depth: 0
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: "14.x"
-    - name: Install yarn dependencies
+    - name: Install yarn dependencies and run danger
       run: |
         yarn add danger --dev
         yarn danger ci
