--- a/.github/workflows/build-mudlet.yml
+++ b/.github/workflows/build-mudlet.yml
@@ -79,6 +79,8 @@ jobs:
     - name: (Windows) Build
       if: matrix.os == 'windows-2019'
       shell: msys2 {0}
+      env:
+        GITHUB_REPO_TAG: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
       run: $GITHUB_WORKSPACE/CI/build-mudlet-for-windows.sh
         
     - name: (Windows) Package
